--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
     "prettier"
   ],
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^19.0.0",
+    "@rollup/plugin-node-resolve": "^13.0.0",
+    "@rollup/plugin-replace": "^2.4.2",
     "@testing-library/react": "^11.2.5",
     "@types/jest": "^26.0.21",
     "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.8",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "eslint": "^7.22.0",
@@ -31,9 +35,13 @@
     "eslint-plugin-jest": "^24.3.2",
     "eslint-plugin-prettier": "^3.3.1",
     "jest": "^26.6.3",
+    "live-server": "^1.2.1",
     "npm-run-all": "^4.1.5",
     "prettier": "2.2.1",
     "react": "^17.0.1",
+    "rollup": "^2.52.1",
+    "rollup-plugin-node-polyfills": "^0.2.1",
+    "rollup-plugin-terser": "^7.0.2",
     "ts-jest": "^26.5.4",
     "typescript": "^4.2.3"
   },
@@ -41,6 +49,10 @@
     "build": "npm-run-all -p build:*",
     "build:cjs": "tsc -p tsconfig.json",
     "build:esm": "tsc -p tsconfig.esm.json",
+    "bundle:prod": "NODE_ENV=production rollup -c",
+    "bundle:dev": "NODE_ENV=development rollup -c",
+    "dev": "node scripts/live-server.js",
+    "postbuild": "npm-run-all -p bundle:*",
     "clean": "rm -rf node_modules dist",
     "format": "prettier '**/*.{ts,tsx,scss,md}' --write",
     "lint": "eslint 'src/**/*.{ts,tsx}' '*.js'",
@@ -48,5 +60,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --collect-coverage --collect-coverage-from 'src/**'"
+  },
+  "dependencies": {
+    "react-dom": "^17.0.1"
   }
 }
